gccida/c3/exp_equiv_p
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/exp_equiv_p/src/cse.c:3110:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v27 = ( ( unsigned int)( mode_class_0[BYTE2( v8)] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/exp_equiv_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/exp_equiv_p/src/obj/cse.o] Error 1
